Adding edit in verUsuarios

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -5,7 +5,21 @@
         <li class="header">MEN&Uacute; DE NAVEGAVCI&Oacute;N</li>
         <li class=" treeview">
           <a href="#" >
-            <i class="fa fa-laptop"></i> <span>Crear Usuario</span>
+            <i class="fa fa-laptop"></i> <span>Empresas</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="crearEmpresa.html"><i class="fa fa-circle-o"></i>Crear</a></li>
+          </ul>
+          <ul class="treeview-menu">
+            <li class=""><a href="verEmpresa.html"><i class="fa fa-circle-o"></i>Ver</a></li>
+          </ul>
+        </li>
+        <li class=" treeview">
+          <a href="#" >
+            <i class="fa fa-laptop"></i> <span>Usuarios</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
