Adding edit in verUsuarios

--- a/public/admin/crearEmpresa.html
+++ b/public/admin/crearEmpresa.html
@@ -137,7 +137,7 @@
                     <input class="form-control" type="text" name="nombre" placeholder="Nombre de la Empresa">
                   </div>
                    <div class="form-group">
-                    <input  name="nit" type='text' class="form-control" placeholder="NIT o Rason Social">
+                    <input  name="nit" type='text' class="form-control" placeholder="NIT o Raz&oacute;n Social">
                   </div>
                   <div class="form-group">
                   <select class="form-control select2" style="width: 100%; border-radius:none;" name="ciudad">
@@ -228,7 +228,6 @@
   data.servicios = [];
   
   $(document).ready(function() {
-    loadServicios();
     isLogued();
   });
   
