Adding edit in verUsuarios

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -14,7 +14,7 @@
             <li class="active"><a href="crearEmpresa.html"><i class="fa fa-circle-o"></i>Crear</a></li>
           </ul>
           <ul class="treeview-menu">
-            <li class=""><a href="verEmpresa.html"><i class="fa fa-circle-o"></i>Ver</a></li>
+            <li class=""><a href="verEmpresas.html"><i class="fa fa-circle-o"></i>Ver</a></li>
           </ul>
         </li>
         <li class=" treeview">
