--- a/public/admin/crearEmpresa.html
+++ b/public/admin/crearEmpresa.html
@@ -71,7 +71,7 @@
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="dist/img/user1-128x128.jpg" class="user-image" alt="User Image">
-              <span class="hidden-xs">Antifraud Minds</span>
+              <span class="hidden-xs" id="nombreMini">Antifraud Minds</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
