--- a/public/admin/saEnviarSolicitud.html
+++ b/public/admin/saEnviarSolicitud.html
@@ -87,62 +87,7 @@
   </header>
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar" style="background-color:#000000;">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-      
-      <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu">
-        <li class="header">MEN&Uacute; DE NAVEGAVCI&Oacute;N</li>
-        <li class=" treeview">
-          <a href="#" >
-            <i class="fa fa-laptop"></i> <span>Crear Usuario</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="crearUsuario.html"><i class="fa fa-circle-o"></i>Crear</a></li>
-          </ul>
-          <ul class="treeview-menu">
-            <li class=""><a href="verUsuario.html"><i class="fa fa-circle-o"></i>Ver</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#" >
-            <i class="fa fa-folder"></i> <span>Ingresar aliados antifraude</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="agregarAliado.html"><i class="fa fa-circle-o"></i>Agregar</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#">
-            <i class="fa fa-envelope"></i> <span>Envi&oacute; de Solicitudes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#">
-            <i class="fa fa-envelope"></i> <span>Mensajes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="verMensajes.html"><i class="fa fa-circle-o"></i>Ver Mensajes</a></li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <!-- /.sidebar -->
+    
   </aside>
 
 
@@ -406,6 +351,9 @@ var currentCliente = null;
 });
 
 postLogin = function (cliente) {
+  if (cliente.tipo == 0) {
+      loadSideBar();
+    }
   currentCliente = cliente;
   renderData(cliente);
   loadServicios();
@@ -463,7 +411,7 @@ function toogleMenu() {
        tituloSolicitud = $('iframe').contents().find('.wysihtml5-editor').text();
     } catch(exp) {
     }
-    if (form.servicio.value > 0 && textRequerimiento != null && textRequerimiento.length > 0 && form.attachment.files.length > 0) {
+    if (form.servicio.value > 0 && textRequerimiento != null && textRequerimiento.length > 0) {
       var newsolicitud = new SolicitudManager();
       tituloSolicitud = tituloSolicitud.length > 15 ? tituloSolicitud.substr(0,15) : tituloSolicitud;
       var data = {idEmpresa:currentCliente.id, idServicio:form.servicio.value, txtRequerimiento: textRequerimiento, tituloSolicitud: tituloSolicitud}; 
