--- a/public/admin/saEnviarSolicitud.html
+++ b/public/admin/saEnviarSolicitud.html
@@ -414,7 +414,7 @@ function toogleMenu() {
     if (form.servicio.value > 0 && textRequerimiento != null && textRequerimiento.length > 0) {
       var newsolicitud = new SolicitudManager();
       tituloSolicitud = tituloSolicitud.length > 15 ? tituloSolicitud.substr(0,15) : tituloSolicitud;
-      var data = {idEmpresa:currentCliente.id, idServicio:form.servicio.value, txtRequerimiento: textRequerimiento, tituloSolicitud: tituloSolicitud}; 
+      var data = {idEmpresa:currentCliente.id,idUsuario:currentCliente.idUsuario, idServicio:form.servicio.value, txtRequerimiento: textRequerimiento, tituloSolicitud: tituloSolicitud}; 
       newsolicitud.insertar(data, form.attachment.files, function (rm) {
         console.log(rm);
         form.reset();
