--- a/public/admin/saVerSolicitudesAll.html
+++ b/public/admin/saVerSolicitudesAll.html
@@ -421,7 +421,7 @@ function loadSolicitudes() {
 
 function renderSolicitudes(solicitudes) {
   var tableContentSolicitudes = document.getElementById("contentSolicitudes");
-  var contentStr = "";
+  var contentStr = '<tr><th></th><th class="mailbox-star">Item</th><th class="mailbox-name">Nombre</th><th class="mailbox-subject">No. Solicitud</th><th class="mailbox-subject">Titulo</th><th class="mailbox-attachment">Archivos Adjuntos</th><th class="mailbox-date">Fecha</th></tr>';
   tableContentSolicitudes.innerHTML = contentStr;
   for (var i = 0; i < solicitudes.length; i++) {
     var solicitud = solicitudes[i];
@@ -439,7 +439,7 @@ function renderData(cliente) {
   
   $(".user-image").attr("src", cliente.logo);
   $("#nombreMini").html(cliente.nombre);
-  $("#nombrePopup").html(cliente.nombre);
+  $("#nombrePopup").html(cliente.nombre); 
   $("#ciudadPopup").html(cliente.ciudad);
   $("#logoPopup").attr("src", cliente.logo);
 }
@@ -460,7 +460,7 @@ function formatFecha(fecha) {
             console.log(fecha.split("T")[0]);
             var date = new Date(fecha.split("T")[0]+"Z");
             date = new Date(date.getTime() + 86400000);
-            return fixZero(date.getDate()) + " de " + meses(date.getMonth()) + " de " + date.getFullYear();
+            return fixZero(date.getDate()) + " de " + meses(date.getMonth()) + " de " + date.getFullYear() + " | " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds();
         }
         
         function meses(mes) {
