--- a/public/admin/saResponderSolicitud.html
+++ b/public/admin/saResponderSolicitud.html
@@ -87,62 +87,7 @@
   </header>
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar" style="background-color:#000000;">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-      
-      <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu">
-        <li class="header">MEN&Uacute; DE NAVEGAVCI&Oacute;N</li>
-        <li class=" treeview">
-          <a href="#" >
-            <i class="fa fa-laptop"></i> <span>Crear Usuario</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="crearUsuario.html"><i class="fa fa-circle-o"></i>Crear</a></li>
-          </ul>
-          <ul class="treeview-menu">
-            <li class=""><a href="verUsuario.html"><i class="fa fa-circle-o"></i>Ver</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#" >
-            <i class="fa fa-folder"></i> <span>Ingresar aliados antifraude</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="agregarAliado.html"><i class="fa fa-circle-o"></i>Agregar</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#">
-            <i class="fa fa-envelope"></i> <span>Envi&oacute; de Solicitudes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#">
-            <i class="fa fa-envelope"></i> <span>Mensajes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="verMensajes.html"><i class="fa fa-circle-o"></i>Ver Mensajes</a></li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <!-- /.sidebar -->
+    
   </aside>
 
 
@@ -151,12 +96,12 @@
     <!-- Content Header (Page header) -->
    <section class="content-header">
       <h1>
-        Crear Solicitud
+        Responder Solicitud
         <small></small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="indexUser.html"><i class="fa fa-dashboard"></i> Inicio</a></li>
-        <li class="active">Crear Solicitud</li>
+        <li class="active">Responder Solicitud</li>
       </ol>
     </section>
 
@@ -191,7 +136,7 @@
         <div class="col-md-9">
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Crear Solicitud</h3>
+              <h3 class="box-title">Responder Solicitud</h3>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -217,7 +162,7 @@
             <!-- /.box-body -->
             <div class="box-footer">
               <div class="pull-right">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Enviar</button>
+                <button type="submit" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Enviar Respuesta</button>
               </div>
             </div>
             <!-- /.box-footer -->
@@ -407,6 +352,9 @@ var currentSolicitud = null;
 });
 
 postLogin = function (cliente) {
+  if (cliente.tipo == 0) {
+      loadSideBar();
+    }
   currentCliente = cliente;
   renderData(cliente);
   loadSolicitud(getParameterByName("idSolicitud"));
@@ -441,6 +389,7 @@ function loadServicio(idServicio) {
       option.innerHTML = servicio.nombre;
       cmbServicio.appendChild(option);
     }
+    cmbServicio.selectedIndex = 1;
   }
 
 function renderData(cliente) {
