--- a/public/admin/saResponderSolicitud.html
+++ b/public/admin/saResponderSolicitud.html
@@ -470,7 +470,7 @@ function getParameterByName(name, url) {
        tituloSolicitud = $('iframe').contents().find('.wysihtml5-editor').text();
     } catch(exp) {
     }
-    if (textRequerimiento != null && textRequerimiento.length > 0) {
+    if (form.estado.value > 0 || (textRequerimiento != null && textRequerimiento.length > 0)) {
       var newsolicitud = new SolicitudManager();
       tituloSolicitud = tituloSolicitud.length > 15 ? tituloSolicitud.substr(0,15) : tituloSolicitud;
       var data = {idEmpresa:currentCliente.id, idServicio:form.servicio.value, textRequerimiento: textRequerimiento, tituloSolicitud: tituloSolicitud, idSolicitud:currentSolicitud.id, estadoDenuncia:form.estado.value}; 
