--- a/public/admin/saVerSolicitudesAll.html
+++ b/public/admin/saVerSolicitudesAll.html
@@ -426,7 +426,7 @@ function renderSolicitudes(solicitudes) {
   for (var i = 0; i < solicitudes.length; i++) {
     var solicitud = solicitudes[i];
     var fileAttachment = solicitud.urlArchivo.length > 0 ? '<a href="'+solicitud.urlArchivo+'" target="_blank"><i class="fa fa-paperclip"></i></a>' : '';
-    contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name"><a href="saVerSolicitud.html?idSolicitud='+solicitud.id+'">'+solicitud.nombre+'</a></td><td class="mailbox-subject">'+solicitud.numeroSolicitud+'</td><td class="mailbox-subject">'+solicitud.tituloSolicitud+'</td><td class="mailbox-attachment">' + fileAttachment +  '</td><td class="mailbox-date">'+formatFecha(solicitud.fecha)+'</td><td class="mailbox-date">'+formatFecha(solicitud.fechaRespuesta)+'</td></tr>';
+    contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name"><a href="saVerSolicitud.html?idSolicitud='+solicitud.id+'">'+solicitud.nombre+'</a></td><td class="mailbox-subject">'+solicitud.numeroSolicitud+'</td><td class="mailbox-subject">'+solicitud.tituloSolicitud+'</td><td class="mailbox-attachment">' + fileAttachment +  '</td><td class="mailbox-date">'+formatFecha(solicitud.fecha)+'</td><td class="mailbox-date">'+ solicitud.fechaRespuesta.length > 6 ? formatFecha(solicitud.fechaRespuesta) : "Sin Respuesta" +'</td></tr>';
   }
   tableContentSolicitudes.innerHTML = contentStr;
   /**
@@ -457,7 +457,6 @@ function toogleMenu() {
 }
 
 function formatFecha(fecha) {
-            console.log(fecha.split("T")[0]);
             var date = new Date(fecha);
             //date = new Date(date.getTime() + 86400000);
             return fixZero(date.getDate()) + " de " + meses(date.getMonth()) + " de " + date.getFullYear() + " | " + fixZero(date.getHours()) + ":" + fixZero(date.getMinutes()) + ":" + fixZero(date.getSeconds());
