Solving the email sending

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -64,5 +64,17 @@
             <li class="active"><a href="verMensajes.html"><i class="fa fa-circle-o"></i>Ver Mensajes</a></li>
           </ul>
         </li>
+        
+        <li class=" treeview">
+          <a href="#">
+            <i class="fa fa-envelope"></i> <span>Notificaciones</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="adminNotificaciones.html"><i class="fa fa-circle-o"></i>Administrar Notificaciones</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
