--- a/public/admin/verMensajes.html
+++ b/public/admin/verMensajes.html
@@ -93,61 +93,7 @@
   </header>
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar" >
-      <section class="sidebar">
       
-      <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu">
-        <li class="header">MEN&Uacute; DE NAVEGAVCI&Oacute;N</li>
-        <li class=" treeview">
-          <a href="#" >
-            <i class="fa fa-laptop"></i> <span>Crear Usuario</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="crearUsuario.html"><i class="fa fa-circle-o"></i>Crear</a></li>
-          </ul>
-          <ul class="treeview-menu">
-            <li class=""><a href="verUsuario.html"><i class="fa fa-circle-o"></i>Ver</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#" >
-            <i class="fa fa-folder"></i> <span>Ingresar aliados antifraude</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="agregarAliado.html"><i class="fa fa-circle-o"></i>Agregar</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#">
-            <i class="fa fa-envelope"></i> <span>Envi&oacute; de Solicitudes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="saVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
-          </ul>
-        </li>
-        <li class=" treeview">
-          <a href="#">
-            <i class="fa fa-envelope"></i> <span>Mensajes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="verMensajes.html"><i class="fa fa-circle-o"></i>Ver Mensajes</a></li>
-          </ul>
-        </li>
-       
-      </ul>
-    </section>
   </aside>
 
    <!-- Content Wrapper. Contains page content -->
@@ -334,6 +280,9 @@
       return num < 10 ? "0" + num : num;
   }
   postLogin = function (cliente) {
+     if (cliente.tipo == 0) {
+      loadSideBar();
+    }
     renderData(cliente);
   }
   
