--- a/public/admin/indexUser.html
+++ b/public/admin/indexUser.html
@@ -98,27 +98,7 @@
   </header>
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-      
-      <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu">
-        <li class="header">MEN&Uacute; DE NAVEGAVI&OacuteO</li>
-        <li class="active treeview">
-          <a href="#" style="border-left-color: #c5a628;">
-            <i class="fa fa-dashboard"></i> <span>Envi&oacute; de Solicitudes</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="active"><a href="suVerSolicitudesAll.html"><i class="fa fa-circle-o"></i>Solicitud</a></li>
-          </ul>
-        </li>
-        <li><a href="suEnviarMensaje.html"><i class="fa fa-circle-o text-aqua" style="color: white !important;"></i> <span>Contactenos</span></a></li>
-      </ul>
-    </section>
-    <!-- /.sidebar -->
+   
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
@@ -438,6 +418,9 @@ $(document).ready(function () {
 });
 
 postLogin = function (cliente) {
+  if (cliente.tipo == 1) {
+      loadSideBarUser();
+    }
   renderData(cliente);
 }
 
