--- a/public/admin/saVerSolicitud.html
+++ b/public/admin/saVerSolicitud.html
@@ -139,7 +139,7 @@
                 <h3 id="numSolicitud">No. Solicitud</h3></br>
                 <h3 id="servicio">Servicio 1</h3>
                 <h3 id="estadoDenuncia"></h3>
-                <h5><label id="nombre"></label>
+                <h5>Por: <label id="nombre"></label>
                   <span class="mailbox-read-time pull-right" id="fecha">15 Feb. 2016 11:03 PM</span></h5>
                   <span class="mailbox-read-time pull-right" id="fechaRespuesta">15 Feb. 2016 11:03 PM</span></h5>
               </div>
