--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -76,5 +76,17 @@
             <li class="active"><a href="adminNotificaciones.html"><i class="fa fa-circle-o"></i>Administrar Notificaciones</a></li>
           </ul>
         </li>
+        
+        <li class=" treeview">
+          <a href="#" >
+            <i class="fa fa-folder"></i> <span>Reporte</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class="active"><a href="crearReporte.html"><i class="fa fa-circle-o"></i>Generar Reporte</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
