--- a/public/admin/suVerSolicitudesAll.html
+++ b/public/admin/suVerSolicitudesAll.html
@@ -436,11 +436,12 @@ function renderSolicitudes(solicitudes) {
   var tableContentSolicitudes = document.getElementById("contentSolicitudes");
   var contentStr = '<tr><th></th><th class="mailbox-star">Item</th><th class="mailbox-name">Nombre</th><th class="mailbox-subject">No. Solicitud</th><th class="mailbox-subject">Titulo</th><th class="mailbox-attachment">Archivos Adjuntos</th><th class="mailbox-date">Fecha Creaci&oacute;n</th><th class="mailbox-date">Fecha &Uacute;ltima respuesta</th></tr>';
   tableContentSolicitudes.innerHTML = contentStr;
+  var fileSolicitudhtml = currentCliente.id == 1 ? "saVerSolicitud" : "suVerSolicitud";
   for (var i = 0; i < solicitudes.length; i++) {
     var solicitud = solicitudes[i];
     var fileAttachment = solicitud.urlArchivo.length > 0 ? '<a href="'+solicitud.urlArchivo+'" target="_blank"><i class="fa fa-paperclip"></i></a>' : '';
     var fechaRespuesta = solicitud.fechaRespuesta != null ? formatFecha(solicitud.fechaRespuesta) : "Sin Respuesta";
-    contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name"><a href="suVerSolicitud.html?idSolicitud='+solicitud.id+'">'+solicitud.nombre+'</a></td><td class="mailbox-subject">'+solicitud.numeroSolicitud+'</td><td class="mailbox-subject">'+solicitud.tituloSolicitud+'</td><td class="mailbox-attachment">' + fileAttachment +  '</td><td class="mailbox-date">'+formatFecha(solicitud.fecha)+'</td><td class="mailbox-date">'+ fechaRespuesta +'</td></tr>';
+    contentStr += '<tr><td></td><td class="mailbox-star"><i class="fa fa-circle text-success"></i></td><td class="mailbox-name"><a href="'+fileSolicitudhtml+'.html?idSolicitud='+solicitud.id+'">'+solicitud.nombre+'</a></td><td class="mailbox-subject">'+solicitud.numeroSolicitud+'</td><td class="mailbox-subject">'+solicitud.tituloSolicitud+'</td><td class="mailbox-attachment">' + fileAttachment +  '</td><td class="mailbox-date">'+formatFecha(solicitud.fecha)+'</td><td class="mailbox-date">'+ fechaRespuesta +'</td></tr>';
   }
   tableContentSolicitudes.innerHTML = contentStr;
   /**
