--- a/public/admin/generarReporte.html
+++ b/public/admin/generarReporte.html
@@ -4,6 +4,7 @@
     <!-- jQuery UI 1.11.4 -->
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script  type="text/javascript" src="../js/solicitudmanager.js"></script>
+    <script src="../js/responsemanager.js"></script>
     
     <link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
