--- a/public/admin/generarReporte.html
+++ b/public/admin/generarReporte.html
@@ -150,7 +150,7 @@
 
 				}
 				//! after the for loop is finished running, we save the pdf.
-				pdf.save('test.pdf');
+				pdf.save('reporte_'+new Date().getTime()+'.pdf');
 			}
 		  });
 		}
