--- a/public/codigodenuncia.html
+++ b/public/codigodenuncia.html
@@ -70,7 +70,7 @@
 						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
-						<li><a href="codigodenuncia.html">CONSULTA C&OACUTE;DIGO &UACUTE;NICO DE DENUNCIA</a></li>
+						<li><a href="codigodenuncia.html">CONSULTA C&Oacute;DIGO &Uacute;NICO DE DENUNCIA</a></li>
 						<li><a style="border-bottom: 2px solid white;" href="contacto.html">CONTACTENOS</a></li>
 						<li><a href="admin/index.html">INICIAR SESÍON</a></li>
 					</ul>
