--- a/public/codigodenuncia.html
+++ b/public/codigodenuncia.html
@@ -66,13 +66,12 @@
 				
 				<div class="col-xs-12 text-right menu-1">
 					<ul style="text-align: center;">
-						<li><a href="psicologia.html">PSICOLOGÍA DEL FRAUDE</a></li>
+						<li><a href="psicologia.html">PSICOLOGIacute;A DEL FRAUDE</a></li>
 						<li><a href="consultorias.html">CONSULTORIAS Y ASESORIAS</a></li>
 						<li><a href="investigacion.html">INVESTIGACIÓN</a></li>
 						<li><a href="servicios.html">SERVICIOS</a></li>
-						<li><a href="codigodenuncia.html">CONSULTA C&Oacute;DIGO &Uacute;NICO DE DENUNCIA</a></li>
 						<li><a style="border-bottom: 2px solid white;" href="contacto.html">CONTACTENOS</a></li>
-						<li><a href="admin/index.html">INICIAR SESÍON</a></li>
+						<li><a href="admin/index.html">LOGIN</a></li>
 					</ul>
 				</div>
 			</div>
@@ -245,6 +244,7 @@
 							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 350 452 26 80</a></li>
 							<li><a href="#"  style="color:white;"><i class="icon-phone" style="color:white;"></i> Radio: 2204*4</a></li>
 							<li><a href="#"  style="color:white;"><i style="color:white;" class="icon-mail2"></i> info@antifraudminds.com</a></li>
+							<li><a href="#"  style="color:white;"><i style="color:white;" class="icon-magnifying-glass"></i> C&oacute;digo U&acute;nico de Denuncia</a></li>
 						</ul>
 					</div>
 				</div>
