--- a/public/psicologia.html
+++ b/public/psicologia.html
@@ -221,6 +221,7 @@
 							<li><a href="#"  style="color:white;"><i class="icon-phone"  style="color:white;"></i> +57 350 452 26 80</a></li>
 							<li><a href="#"  style="color:white;"><i class="icon-phone" style="color:white;"></i> Radio: 2204*4</a></li>
 							<li><a href="#"  style="color:white;"><i style="color:white;" class="icon-mail2"></i> info@antifraudminds.com</a></li>
+							<li><a href="#"  style="color:white;"><i style="color:white;" class="icon-magnifying-glass"></i> C&oacute;digo U&acute;nico de Denuncia</a></li>
 						</ul>
 					</div>
 				</div>
