Consulta codigo denuncia

--- a/public/codigodenuncia.html
+++ b/public/codigodenuncia.html
@@ -126,7 +126,7 @@
 					
 					<div class="gtco-contact-info" id="resultado">
 						<h3>Resultado</h3>
-						<ul>
+						<ul style="margin-left: -50px;">
 							<li>C&oacute;digo &Uacute;nico de Denuncia: <label id="codigoUnicolabel"></label></li>
 							<li>Fecha de Creaci&oacute;n: <label id="fechaCreacion"></label></li>
 							<li>Fecha de Cambio de Estado: <label id="fechaCambioEstado"></label></li>
